--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@ div.map{
             <ul>6417 BK Heerlen</ul>
             <br>
             <ul>tel.: 045-5740150</ul>
-            <ul>e-mail: <a href="sendto:post@bernardinuscollege.nl">post@bernardinuscollege.nl</a></ul>
+            <ul>e-mail: <a href="mailto:post@bernardinuscollege.nl">post@bernardinuscollege.nl</a></ul>
             <ul>IBAN: NL02INGB066 07 32 750</ul>
         </div>
     
